Addresses issues revealed through static analysis.
Refs #96440